# jormungandr

./: .gitignore  README.md  benchmark.sh  meson.build  webgraph_benchmark.sh
benchmark/: build.gradle  run-java-benchmarks.sh
benchmark/src/main/java/space/pythons/jormungandr/benchmark/: Main.java
include/: bitbuffer.hpp  encoding.hpp  exceptions.hpp  type_cast.hpp  utility.h  utility.hpp
include/decode/: binary.hpp  bitreader.hpp  decoder.hpp  property.hpp  tsv.hpp  webgraph.hpp
include/encode/: binary.hpp  bitwriter.hpp  encoding.hpp  property.hpp  tsv.hpp  webgraph.hpp
include/graph/: graph.hpp  propertymap.hpp
src/: benchmark.cpp  encoding.cpp  main.cpp  recode.cpp  utility.cpp
src/decode/: bitreader.cpp  property.cpp  webgraph.cpp
src/encode/: bitwriter.cpp  property.cpp  webgraph.cpp
src/graph/: propertymap.cpp
test/: test.tsv
